--- a/html/index.html
+++ b/html/index.html
@@ -24,9 +24,9 @@
               个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a  href="../user/user_info.html" target="fm">基本资料</a></dd>
-              <dd><a href="../user/user_avatar.html" target="fm">更换头像</a></dd>
-              <dd><a href="../user/user_pwd.html"  target="fm">重置密码</a></dd>
+              <dd><a  href="../html/user/user_info.html" target="fm">基本资料</a></dd>
+              <dd><a href="../html/user/user_avatar.html" target="fm">更换头像</a></dd>
+              <dd><a href="../html/user/user_pwd.html"  target="fm">重置密码</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
@@ -48,17 +48,17 @@
             <li class="layui-nav-item ">
               <a class="" href="javascript:;"><span class="iconfont">&#xe615</span>文章管理</a>
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;">文章类别</a></dd>
-                <dd><a href="javascript:;">文章列表</a></dd>
-                <dd><a href="javascript:;">发表文章</a></dd>
+                <dd><a href="../html/article/art_cate.html" target="fm">文章类别</a></dd>
+                <dd><a href="../html/article/art_list.html" target="fm">文章列表</a></dd>
+                <dd><a href="../html/article/art_pub.html" target="fm">发表文章</a></dd>
               </dl>
             </li>
             <li class="layui-nav-item">
               <a href="javascript:;"><span class="iconfont">&#xe600</span>个人中心</a>
               <dl class="layui-nav-child">
-                <dd><a href="../user/user_info.html" target="fm">基本资料</a></dd>
-                <dd><a href="../user/user_avatar.html" target="fm">更换头像</a></dd>
-                <dd><a href="../user/user_pwd.html"  target="fm">重置密码</a></dd>
+                <dd><a href="../html/user/user_info.html" target="fm">基本资料</a></dd>
+                <dd><a href="../html/user/user_avatar.html" target="fm">更换头像</a></dd>
+                <dd><a href="../html/user/user_pwd.html"  target="fm">重置密码</a></dd>
               </dl>
             </li>
           </ul>
