--- a/html/user/user_info.html
+++ b/html/user/user_info.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="//unpkg.com/layui@2.6.8/dist/css/layui.css">
-    <link rel="stylesheet" href="../css/user/user_info.css">
+    <link rel="stylesheet" href="../../css/user/user_info.css">
 </head>
 <body>
     <div class="layui-card">
@@ -44,8 +44,8 @@
         </div>
       </div>
       <script src="//unpkg.com/layui@2.6.8/dist/layui.js"></script>
-      <script src="../js/jquery.min.js"></script> 
-      <script src="../js/baseAPI.js"></script>
-      <script src="../js/user/user_info.js"></script>     
+      <script src="../../js/jquery.min.js"></script> 
+      <script src="../../js/baseAPI.js"></script>
+      <script src="../../js/user/user_info.js"></script>     
 </body>
 </html>
