--- a/html/user/user_pwd.html
+++ b/html/user/user_pwd.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="//unpkg.com/layui@2.6.8/dist/css/layui.css">
-    <link rel="stylesheet" href="../css/user/user_pwd.css">
+    <link rel="stylesheet" href="../../css/user/user_pwd.css">
 </head>
 <body>
     <div class="layui-card">
@@ -45,8 +45,8 @@
 </div>
           
     <script src="//unpkg.com/layui@2.6.8/dist/layui.js"></script> 
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/baseAPI.js"></script>
-    <script src="../js/user/user_pwd.js"></script>
+    <script src="../../js/jquery.min.js"></script>
+    <script src="../../js/baseAPI.js"></script>
+    <script src="../../js/user/user_pwd.js"></script>
 </body>
 </html>
